--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "connect": "^3.0.1",
-    "minimist": "^0.2.0"
+    "minimist": "^0.2.0",
+    "serve-static": "^1.3.0"
   }
 }
