--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "connect": "^3.0.1",
     "jade": "^1.3.1",
+    "less": "^1.7.3",
     "minimist": "^0.2.0",
     "serve-static": "^1.3.0"
   },
